--- a/Cargo.toml
+++ b/Cargo.toml
@@ -16,6 +16,7 @@ name = "mwczip"
 path = "src/zip/main.rs"
 
 [dependencies]
+nix = "0.10.0"
 serde = "1"
 dont_disappear = "3.0.0"
 serde_derive = "1"
@@ -56,46 +57,49 @@ zip = { version = "0.5", features = ["deflate"] }
 
 
 # Release
-grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
-grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
+#grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
+#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
 #grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
-grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
-grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
-grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
-grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
-grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.1" }
-grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.1" }
-grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.1" }
-grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.1" }
-grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.1" }
+#grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
+#grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
+#grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
+#grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.1" }
+#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.1" }
+#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.1" }
+#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.1" }
+#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.1" }
+#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.1" }
+#grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.1" }
 
 # For bleeding edge
-#grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-#grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-#grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-#grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-#grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-#grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
 
 # For local testing
-#grin_api = { path = "../mwc-node/api", version= "3.1.3"}
-#grin_core = { path = "../mwc-node/core", version= "3.1.3"}
-#grin_keychain = { path = "../mwc-node/keychain", version= "3.1.3"}
-#grin_chain = {path = "../mwc-node/chain", version= "3.1.3" }
-#grin_util = { path = "../mwc-node/util", version= "3.1.3"}
-#grin_store = { path = "../mwc-node/store", version= "3.1.3"}
-#grin_p2p = { path = "../mwc-node/p2p", version= "3.1.3" }
-#grin_wallet_impls = { path = "../mwc-wallet/impls", version= "3.2.1-beta.1" }
-#grin_wallet_libwallet = { path = "../mwc-wallet/libwallet", version= "3.2.1-beta.1" }
-#grin_wallet_api = { path = "../mwc-wallet/api", version= "3.2.1-beta.1" }
-#grin_wallet_controller = { path = "../mwc-wallet/controller", version= "3.2.1-beta.1" }
-#grin_wallet_config = { path = "../mwc-wallet/config", version= "3.2.1-beta.1" }
+#grin_api = { path = "../mwc-node/api", version= "3.2.1"}
+#grin_core = { path = "../mwc-node/core", version= "3.2.1"}
+#grin_keychain = { path = "../mwc-node/keychain", version= "3.2.1"}
+#grin_chain = {path = "../mwc-node/chain", version= "3.2.1" }
+#grin_util = { path = "../mwc-node/util", version= "3.2.1"}
+#grin_store = { path = "../mwc-node/store", version= "3.2.1"}
+#grin_p2p = { path = "../mwc-node/p2p", version= "3.2.1" }
+#grin_wallet_impls = { path = "../mwc-wallet/impls", version= "3.2.1" }
+#grin_wallet_libwallet = { path = "../mwc-wallet/libwallet", version= "3.2.1" }
+#grin_wallet_api = { path = "../mwc-wallet/api", version= "3.2.1" }
+#grin_wallet_controller = { path = "../mwc-wallet/controller", version= "3.2.1" }
+#grin_wallet_config = { path = "../mwc-wallet/config", version= "3.2.1" }
+#grin_wallet_util = { path = "../mwc-wallet/util", version= "3.2.1" }
 
 # OS specific dependencies
 [target.'cfg(not(target_os = "android"))'.dependencies]
