--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,12 +78,25 @@ grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" 
 grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
 grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
 grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+
+
+
+
+#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "topic/hcasalet/newswap" }
+#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "topic/hcasalet/newswap" }
+#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "topic/hcasalet/newswap" }
+#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "topic/hcasalet/newswap" }
+#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "topic/hcasalet/newswap" }
+#grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = "topic/hcasalet/newswap" }
+
+
+
 
 # For local testing
 #grin_api = { path = "../mwc-node/api", version= "3.2.1"}
@@ -93,12 +106,12 @@ grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = 
 #grin_util = { path = "../mwc-node/util", version= "3.2.1"}
 #grin_store = { path = "../mwc-node/store", version= "3.2.1"}
 #grin_p2p = { path = "../mwc-node/p2p", version= "3.2.1" }
-#grin_wallet_impls = { path = "../mwc-wallet/impls", version= "3.2.1" }
-#grin_wallet_libwallet = { path = "../mwc-wallet/libwallet", version= "3.2.1" }
-#grin_wallet_api = { path = "../mwc-wallet/api", version= "3.2.1" }
-#grin_wallet_controller = { path = "../mwc-wallet/controller", version= "3.2.1" }
-#grin_wallet_config = { path = "../mwc-wallet/config", version= "3.2.1" }
-#grin_wallet_util = { path = "../mwc-wallet/util", version= "3.2.1" }
+grin_wallet_impls = { path = "../mwc-wallet/impls", version= "3.2.1" }
+grin_wallet_libwallet = { path = "../mwc-wallet/libwallet", version= "3.2.1" }
+grin_wallet_api = { path = "../mwc-wallet/api", version= "3.2.1" }
+grin_wallet_controller = { path = "../mwc-wallet/controller", version= "3.2.1" }
+grin_wallet_config = { path = "../mwc-wallet/config", version= "3.2.1" }
+grin_wallet_util = { path = "../mwc-wallet/util", version= "3.2.1" }
 
 # OS specific dependencies
 [target.'cfg(not(target_os = "android"))'.dependencies]
