--- a/Cargo.toml
+++ b/Cargo.toml
@@ -55,13 +55,13 @@ lazy_static = "1"
 zip = { version = "0.5", features = ["deflate"] } 
 
 # Release
-#grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.2" }
-#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.2" }
-#grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.2" }
-#grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.2" }
-#grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.2" }
-#grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.2" }
-#grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "3.2.2" }
+grin_core = { git = "https://github.com/mwcproject/mwc-node", tag = "prerebase_to_v5" }
+grin_keychain = { git = "https://github.com/mwcproject/mwc-node", tag = "prerebase_to_v5" }
+grin_chain = { git = "https://github.com/mwcproject/mwc-node", tag = "prerebase_to_v5" }
+grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "prerebase_to_v5" }
+grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "prerebase_to_v5" }
+grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "prerebase_to_v5" }
+grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "prerebase_to_v5" }
 #grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.2" }
 #grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.2" }
 #grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.2" }
@@ -70,13 +70,13 @@ zip = { version = "0.5", features = ["deflate"] }
 #grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.2" }
 
 # For bleeding edge
-grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_keychain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_chain = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
+#grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
 grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
 grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
 grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
