--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "mwc713"
-version = "3.2.3-beta.1"
+version = "3.3.0"
 authors = ["vault713 devs"]
 description = "A wallet that makes it easy to send, store, and swap MWC."
 keywords = [ "grin", "mimblewimble", "rust", "crypto", "cryptocurrency" ]
@@ -62,12 +62,12 @@ grin_util = { git = "https://github.com/mwcproject/mwc-node", tag = "prerebase_t
 grin_api = { git = "https://github.com/mwcproject/mwc-node", tag = "prerebase_to_v5" }
 grin_store = { git = "https://github.com/mwcproject/mwc-node", tag = "prerebase_to_v5" }
 grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "prerebase_to_v5" }
-#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.2" }
-#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.2" }
-#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.2" }
-#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.2" }
-#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.2" }
-#grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.2.2" }
+grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.3.0" }
+grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.3.0" }
+grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.3.0" }
+grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.3.0" }
+grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.3.0" }
+grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", tag = "3.3.0" }
 
 # For bleeding edge
 #grin_core = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
@@ -77,12 +77,12 @@ grin_p2p = { git = "https://github.com/mwcproject/mwc-node", tag = "prerebase_to
 #grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
 #grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
 #grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+##grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
 
 # For local testing
 #grin_api = { path = "../mwc-node/api"}
