--- a/Cargo.toml
+++ b/Cargo.toml
@@ -78,12 +78,12 @@ grin_util = { git = "https://github.com/mwcproject/mwc-node", branch = "master" 
 grin_api = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
 grin_store = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
 grin_p2p = { git = "https://github.com/mwcproject/mwc-node", branch = "master" }
-grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
-grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_impls = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_libwallet = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_api = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_controller = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_config = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
+#grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = "master" }
 
 # For local testing
 #grin_api = { path = "../mwc-node/api"}
@@ -93,12 +93,12 @@ grin_wallet_util = { git = "https://github.com/mwcproject/mwc-wallet", branch = 
 #grin_util = { path = "../mwc-node/util"}
 #grin_store = { path = "../mwc-node/store"}
 #grin_p2p = { path = "../mwc-node/p2p"}
-#grin_wallet_impls = { path = "../mwc-wallet/impls"}
-#grin_wallet_libwallet = { path = "../mwc-wallet/libwallet"}
-#grin_wallet_api = { path = "../mwc-wallet/api"}
-#grin_wallet_controller = { path = "../mwc-wallet/controller"}
-#grin_wallet_config = { path = "../mwc-wallet/config"}
-#grin_wallet_util = { path = "../mwc-wallet/util"}
+grin_wallet_impls = { path = "../mwc-wallet/impls"}
+grin_wallet_libwallet = { path = "../mwc-wallet/libwallet"}
+grin_wallet_api = { path = "../mwc-wallet/api"}
+grin_wallet_controller = { path = "../mwc-wallet/controller"}
+grin_wallet_config = { path = "../mwc-wallet/config"}
+grin_wallet_util = { path = "../mwc-wallet/util"}
 
 # OS specific dependencies
 [target.'cfg(not(target_os = "android"))'.dependencies]
